[package]
name = "cbindgen_test_c"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
headers = []

[build-dependencies]
cbindgen = "0.8.3"

[profile.debug]
panic = "abort"

[profile.release]
panic = "abort"